@@ -24,6 +24,8 @@
 -- fixed normalization config init
 -- fixed block etc. rule parsing
 -- added comment for binder bug
+-- fixed non-paf splitter init
+-- fixed splitter update calls
 
 126
 -- pulled latest from tom
